Changed css to prevent horizontal scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -579,7 +579,10 @@ body.search-overlay:after {
 .img-rounded {
     border-radius: 50%}
 html, body {
-    height: 100%}
+    height: 100%
+	max-width: 100%;
+	overflow-x: hidden;
+}
 .header-site, .header-post {
     background: #d24726;
     height: 100%;
